fix: 버튼의 z-index 수정

--- a/src/components/Confirm.module.css
+++ b/src/components/Confirm.module.css
@@ -53,7 +53,7 @@
   border-radius: 12px;
   background-color: var(--background-color);
   transform: translate(-50%, -50%);
-  z-index: 999;
+  z-index: 998;
 }
 
 .content {
